[package]
name = "LD"
version = "0.0.1"
authors = ["misto423 <misto423@gmail.com>"]

[[bin]]
name = "LD32"
path = "src/main.rs"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.piston2d-sprite]
git = "https://github.com/Misto423/sprite"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston-ai_behavior]
git = "https://github.com/pistondevelopers/ai_behavior"
